--- a/src/components/LoginPage.css
+++ b/src/components/LoginPage.css
@@ -1,6 +1,18 @@
-.centered {
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.wrapper {
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: lightskyblue;
+}
+
+.buttonStuff {
+  text-align: center;
+}
+
+.signup {
+    font-size: 15px;
+    color: blue
 }
