--- a/src/components/SignupPage.css
+++ b/src/components/SignupPage.css
@@ -1,6 +1,13 @@
-.centered {
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.wrapper {
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: skyblue;
+}
+
+.buttonStuff {
+  text-align: center;
 }
