--- a/src/components/LoginPage.css
+++ b/src/components/LoginPage.css
@@ -2,7 +2,6 @@
   height: 100%;
   width: 100%;
   background-color: white;
-  border-radius: 20px;
   display: inline-block;
 }
 
@@ -30,9 +29,8 @@
 }
 
 input, #optionStuff {
-  border-radius: 60px;
   width: 70%;
-  background: lightgray;
+  background: white;
   margin-top: 10%;
 }
 
@@ -41,7 +39,7 @@ input::placeholder {
 }
 
 input {
-  padding-left: 5%;
+  padding-left: 1.5%;
   outline: none;
 }
 
@@ -55,7 +53,6 @@ input {
 .logButton {
   font-size: 20px;
   text-align: center;
-  border-radius: 60px;
   width: 70%;
   background: lightblue;
   padding: 5px;
